--- a/form_validation_localStorage/src/index.css
+++ b/form_validation_localStorage/src/index.css
@@ -4,4 +4,5 @@
 
 *{
     outline: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
